# Bevy-Shader-Plugin

./: .gitignore  Cargo.toml  README.md
assets/shaders/: array_shader.wgsl  example.wgsl  simple_shader.wgsl  solar_system.wgsl  storage_shader.wgsl  texture_shader.wgsl
bevy_fragment_shader/: Cargo.toml
bevy_fragment_shader/src/: bind_group.rs  lib.rs  node.rs  pipeline.rs
examples/: array_shader.rs  simple_shader.rs  solar_system.rs  storage_shader.rs  texture_shader.rs
shader_example/: Cargo.toml
shader_example/src/: main.rs
src/: auto_array.rs  auto_buffer.rs  auto_storage.rs  bind_group.rs  extra_bind_group.rs  lib.rs  node.rs  pipeline.rs
