[package]
name = "bevy_fragment_shader"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
] }
encase = "0.12"
wgpu = "27"

[dev-dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["3d", "dev"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
