[package]
name = "bevy-fragment-shader-plugin"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A Bevy plugin for streamlining fragment shader development."
repository = "https://github.com/EliDeCo/Bevy-Shader-Plugin"
readme = "README.md"
keywords = ["bevy", "shader", "plugin", "wgpu"]
categories = ["game-development", "graphics", "rendering"]

[lib]
name = "bevy_fragment_shader_plugin"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
] }
encase = "0.12"
wgpu = "27"
